--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,14 @@
-<h2> {{  message }} </h2>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        {% if title %}
+        <title> {{ title }}</title>
+        {% else %}
+        <title> Welcome to the best Movie Review website </title>
+        {% endif %}
+    </head>
+    <body>
+        <h1> Karibu </h1>
+    </body>
+</html>
